# air-quality

./: .gitignore  main.ipynb  pyproject.toml
data/Bulgaria_AMS Studen kladenets/: Bulgaria_AMS Studen kladenets.pkl
data/China_Hong Kong, North/: China_Hong Kong, North.csv  China_Hong Kong, North_cleaned.csv
data/Costa Rica_NASA GSFC Rutgers Calib. N13/: Costa Rica_NASA GSFC Rutgers Calib. N13.csv  Costa Rica_NASA GSFC Rutgers Calib. N13.pkl  Costa Rica_NASA GSFC Rutgers Calib. N13_cleaned.csv
data/Costa Rica_San José, San Pedro, Montes de Oca/: Costa Rica_San José, San Pedro, Montes de Oca.csv  Costa Rica_San José, San Pedro, Montes de Oca.pkl  Costa Rica_San José, San Pedro, Montes de Oca_cleaned.csv
data/España_Madrid, Villa del Prado/: España_Madrid, Villa del Prado.csv  España_Madrid, Villa del Prado.pkl  España_Madrid, Villa del Prado_cleaned.csv
data/Finlandia_Kallio 2/: Finlandia_Kallio 2.pkl
data/Italia_Marche, Genga -Parco Gola della Rossa/: Italia_Marche, Genga -Parco Gola della Rossa.csv  Italia_Marche, Genga -Parco Gola della Rossa_cleaned.csv
data/Mumbai_Mahape, Navi Mumbai/: Mumbai_Mahape, Navi Mumbai.csv  Mumbai_Mahape, Navi Mumbai.pkl  Mumbai_Mahape, Navi Mumbai_cleaned.csv
data/Perú_Ayacucho, Pariachi/: Perú_Ayacucho, Pariachi.csv  Perú_Ayacucho, Pariachi.pkl  Perú_Ayacucho, Pariachi_cleaned.csv
data/Spain_Escaldes-Engordany/: Spain_Escaldes-Engordany.csv  Spain_Escaldes-Engordany_cleaned.csv
