[project]
name = "air-quality"
version = "0.1.0"
description = "lab 1 of the data science course at Universidad de Costa Rica, 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
